<resources>
    <string name="app_name">ANDROID002</string>
    <string name="action_settings">Settings</string>
    <string name="home_screen">Home screen</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="popular">Popular</string>
    <string name="error">Error</string>

    <string name="error_no_internet">No internet</string>
    <string name="error_not_found">Nothing found</string>
    <string name="error_service_problem">Service problem</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="refresh">Refresh</string>
    <string name="details">Details</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="runtime">Runtime</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="cast">Cast</string>
    <string name="poster">Poster</string>


    <plurals name="season_plural">
        <item quantity="one"> %1$d season</item>
        <item quantity="other"> %1$d seasons</item>
    </plurals>

    <plurals name="episode_plural">
        <item quantity="one"> %1$d episode</item>
        <item quantity="other"> %1$d episodes</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one"> %1$d minute</item>
        <item quantity="other"> %1$d minutes</item>
    </plurals>
    <string name="year_with_commas">Year:</string>
    <string name="average_vote">Rating</string>
    <string name="type_a_request">Type request</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="user_name">User name</string>
    <string name="user_id">User id</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_to_profile">Enter to profile</string>
    <string name="session_done">Session is done, please login</string>
    <string name="error_try_again">Error. Try again</string>
    <string name="login_denied_by_user">Login denied by user</string>
    <string name="login_success">Login is success</string>
    <string name="logout_succes">Logout success</string>
    <string name="close">Close</string>
    <string name="default_chanel">Default chanel</string>
    <string name="notificationDescription">Notification Description</string>
    <string name="deepLinkNotificationTitle">Deep Link Notification Title</string>
    <string name="notification_text">Notification text</string>
    <string name="static_shortcut_label_short">Favorite tvshow</string>
    <string name="static_shortcut_label_long">Go to favorite tvshow</string>
    <string name="static_shortcut_disabled_message">Favorite shortcut disable</string>
    <string name="choose_document">Choose Document</string>
    <string name="upload_document">Upload Document</string>
    <string name="choose_pdf">Choose PDF</string>
    <string name="proceed_next">Next</string>
    <string name="choose_name">Choose name</string>
    <string name="upload_success">Upload Success</string>
    <string name="confirm_upload">Confirm upload</string>
    <string name="upload">Upload</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="uploading_pdf_to_server">Uploading PDF to server</string>
    <string name="channel_id_main">Main</string>
    <string name="uploading_content">Uploading file %1$s</string>
    <string name="done">Done</string>
    <string name="upload_stared">Upload stared</string>
    <string name="retry">Retry</string>
</resources>