<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upload.presentation.confirmUpload.ConfirmUploadFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="@string/confirm_upload"
        app:titleTextAppearance="@style/TitleText" />

    <ImageView
        android:id="@+id/placeholderImage"
        android:layout_width="@dimen/error_placeholder_size"
        android:layout_height="@dimen/error_placeholder_size"
        android:layout_marginTop="@dimen/error_placeholder_margin_top"
        android:contentDescription="@string/error"
        android:src="@drawable/error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/errorTextView"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top_variant_1"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholderImage"
        tools:text="string/error" />

    <TextView
        android:id="@+id/documentNameTextView"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top_variant_1"
        android:ellipsize="end"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorTextView"
        tools:text="document name" />

    <ImageView
        android:id="@+id/documentImageView"
        android:layout_width="160dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/button_margin_top"
        android:contentDescription="@string/choose_pdf"
        android:src="@drawable/content_cover_rv"
        android:visibility="visible"
        app:layout_constraintDimensionRatio="2:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/documentNameTextView" />


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/confirm_upload"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/documentImageView" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/back"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_button" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar"
        android:layout_height="@dimen/progress_bar"
        android:layout_marginTop="@dimen/button_margin_top"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <TextView
        android:id="@+id/statusTextView"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top_variant_1"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:text="string/error" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/retry"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusTextView" />

    <Button
        android:id="@+id/to_home_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/home_screen"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retry_button" />

</androidx.constraintlayout.widget.ConstraintLayout>