<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.presentation.ui.ProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/profileToolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/profile"
        app:titleTextAppearance="@style/TitleText" />

    <FrameLayout
        android:id="@+id/closeWebViewButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/profileToolbar"
        app:layout_constraintEnd_toEndOf="@id/profileToolbar"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/profileToolbar"
        app:layout_constraintTop_toTopOf="@id/profileToolbar">

        <ImageView
            android:id="@+id/closeWebViewImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_cross" />
    </FrameLayout>

    <TextView
        android:id="@+id/messageTextView"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top_variant_1"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileToolbar"
        tools:text="string/error" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLineStart"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLineEnd"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_horizontal" />

    <TextView
        android:id="@+id/userNameTitleTextView"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top_variant_1"
        android:ellipsize="end"
        android:text="@string/user_name"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guidLineStart"
        app:layout_constraintTop_toBottomOf="@id/messageTextView" />

    <TextView
        android:id="@+id/userNameTextView"
        style="@style/RegularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top_variant_1"
        android:ellipsize="end"
        android:maxLines="1"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guidLineStart"
        app:layout_constraintTop_toBottomOf="@id/userNameTitleTextView"
        tools:text="Some username" />

    <TextView
        android:id="@+id/userIdTitleTextView"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top_variant_1"
        android:ellipsize="end"
        android:text="@string/user_id"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guidLineStart"
        app:layout_constraintTop_toBottomOf="@id/userNameTextView" />

    <TextView
        android:id="@+id/userIdTextView"
        style="@style/RegularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top_variant_1"
        android:ellipsize="end"
        android:maxLines="1"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guidLineStart"
        app:layout_constraintTop_toBottomOf="@id/userIdTitleTextView"
        tools:text="Some Id" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/login"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guidLineStart"
        app:layout_constraintTop_toBottomOf="@id/userIdTextView" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/logout"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guidLineStart"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <Button
        android:id="@+id/toUploadFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/choose_pdf"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@id/guidLineStart"
        app:layout_constraintTop_toBottomOf="@id/logoutButton" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileToolbar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar"
        android:layout_height="@dimen/progress_bar"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
