<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upload.presentation.chooseDocument.ChooseDocumentFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:titleTextAppearance="@style/TitleText"
        app:title="@string/choose_pdf" />

    <Button
        android:id="@+id/chooseDocumentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/choose_document"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar"
        android:layout_height="@dimen/progress_bar"
        android:layout_marginTop="@dimen/button_margin_top"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseDocumentButton" />

    <TextView
        android:id="@+id/documentNameTextView"
        style="@style/RegularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top_variant_1"
        android:ellipsize="end"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseDocumentButton"
        tools:text="document name" />

    <ImageView
        android:id="@+id/documentImageView"
        android:layout_width="160dp"
        android:layout_height="@dimen/_0dp"
        android:contentDescription="@string/choose_pdf"
        app:layout_constraintDimensionRatio="2:3"
        android:layout_marginTop="@dimen/button_margin_top"
        android:src="@drawable/content_cover_rv"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/documentNameTextView" />

    <Button
        android:id="@+id/proceedNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/proceed_next"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/documentImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>