<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="61dp">

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="@dimen/item_search_content_poster_width"
        android:layout_height="@dimen/_0dp"
        android:layout_marginStart="@dimen/item_search_content_poster_margin_start"
        android:layout_marginTop="@dimen/item_search_content_poster_margin_top"
        android:layout_marginBottom="@dimen/item_search_content_poster_margin_bottom"
        android:contentDescription="@string/poster"
        app:layout_constraintDimensionRatio="2:3"
        android:scaleType="fitCenter"
        android:src="@drawable/content_cover_rv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_search_content_title_margin_start"
        android:layout_marginTop="@dimen/item_search_content_title_margin_top"
        android:layout_marginEnd="@dimen/item_search_content_title_margin_end"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/RegularText"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/ArrowImageView"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/posterImageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Content name" />

    <TextView
        android:id="@+id/voteTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_search_content_vote_title_margin_start"
        android:layout_marginTop="@dimen/item_search_content_vote_title_margin_top"
        android:layout_marginBottom="@dimen/item_search_content_vote_title_margin_bottom"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/MediumText"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/average_vote"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/posterImageView"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintEnd_toStartOf="@id/voteTextView" />

    <TextView
        android:id="@+id/voteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_search_content_packed_text_margin_start"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/MediumText"
        app:layout_constraintBottom_toBottomOf="@id/voteTitleTextView"
        app:layout_constraintEnd_toStartOf="@id/point"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/voteTitleTextView"
        app:layout_constraintTop_toTopOf="@id/voteTitleTextView"
        tools:text="5,6" />

    <ImageView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:layout_marginStart="@dimen/item_search_content_packed_text_margin_start"
        android:src="@drawable/point"
        app:layout_constraintBottom_toBottomOf="@id/voteTitleTextView"
        app:layout_constraintEnd_toStartOf="@id/yearTitleTextView"
        app:layout_constraintStart_toEndOf="@id/voteTextView"
        app:layout_constraintTop_toTopOf="@id/voteTitleTextView"
        app:tint="?attr/colorSecondary" />

    <TextView
        android:id="@+id/yearTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginStart="@dimen/item_search_content_packed_text_margin_start"
        android:textAppearance="@style/MediumText"
        app:layout_constrainedWidth="true"
        android:text="@string/year_with_commas"
        app:layout_constraintBottom_toBottomOf="@id/point"
        app:layout_constraintStart_toEndOf="@id/point"
        app:layout_constraintEnd_toStartOf="@id/yearTextView"
        app:layout_constraintTop_toTopOf="@id/point" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_search_content_packed_text_margin_start"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/MediumText"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/yearTitleTextView"
        app:layout_constraintEnd_toStartOf="@+id/ArrowImageView"
        app:layout_constraintStart_toEndOf="@id/yearTitleTextView"
        app:layout_constraintTop_toTopOf="@id/yearTitleTextView"
        tools:text="2024" />

    <ImageView
        android:id="@+id/ArrowImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_search_content_packed_text_margin_end"
        android:contentDescription="@string/details"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorSecondary" />
</androidx.constraintlayout.widget.ConstraintLayout>