<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.presentation.ui.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/contentToolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/search"
        app:titleTextAppearance="@style/TitleText" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:layout_marginTop="@dimen/padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentToolbar">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/type_a_request"
            tools:ignore="Autofill,RtlSymmetry" />

        <ImageView
            android:id="@+id/searchFormButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginStart="@dimen/padding_horizontal"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search"
            app:tint="@color/black_universal" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/margin_vertical"
        app:layout_constraintBottom_toTopOf="@+id/paginationProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <ProgressBar
        android:id="@+id/paginationProgressBar"
        android:layout_width="@dimen/progress_bar"
        android:layout_height="@dimen/progress_bar"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_horizontal"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchRecyclerView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="157dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar"
        android:layout_height="@dimen/progress_bar"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/placeholderImage"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/error"
        android:src="@drawable/error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <TextView
        android:id="@+id/errorTextView"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholderImage"
        tools:text="Ошибка" />

</androidx.constraintlayout.widget.ConstraintLayout>